{
    "name": "PlayerInputHandler",
    "maps": [
        {
            "name": "Menu",
            "id": "0196dc1e-153b-494a-8d5d-c4e0d7c3a642",
            "actions": [
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "82492890-a2e8-42f5-8d8f-6808d4cc2bee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "f5bb39a0-e702-436f-a502-dba68dd60793",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "785ef796-fc66-4b57-8392-e61f709ff5a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dfa0b023-b1c7-4211-bedd-d94c84cd7197",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f21336ba-f5d0-4496-87db-da025f205ddd",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0fd6de3-1ed3-4fe1-88c1-7c0871ea2225",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1840002f-1063-4adb-a594-57a36dde51b9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b6d7db3-2796-4fbe-acde-694a784b7756",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c73cf2a-cdab-4677-a535-55c591d373e5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LockPicking",
            "id": "a42042ac-3350-44d7-b5ee-ed1f7552b176",
            "actions": [
                {
                    "name": "PickXY",
                    "type": "Value",
                    "id": "dd701b62-f711-4af9-a0dc-e6854707984e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PickZ",
                    "type": "Value",
                    "id": "9dffd47e-3f73-4a7b-8252-d0fe47ad6c2f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PickRotation",
                    "type": "Value",
                    "id": "d6dd3bf2-494a-4371-9274-4613a3fd9582",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlugRotation",
                    "type": "Button",
                    "id": "bec9cf12-75e3-458a-a614-9c060bbeac24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db97397f-6229-4842-b122-69956c3aa863",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PickXY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f4aad38-22ff-4e8d-bb90-571aa60537fa",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "PickXY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Triggers",
                    "id": "5f009d1f-3594-4b65-a858-4ff119b37dba",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickZ",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1c9a8405-5029-4f72-835b-e9a02dabff34",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PickZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3565e786-9523-4694-bb0c-abc3105e965c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PickZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bd735064-0d97-4913-89bc-274583dac545",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Normalize(max=10)",
                    "groups": "Keyboard & Mouse",
                    "action": "PickZ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2de20384-1e62-4aec-bd03-f2423d6c4efa",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "Gamepad",
                    "action": "PickRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ShoulderButtons",
                    "id": "dac48b51-6559-410a-a06f-924ca245f260",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Scale(factor=15)",
                    "groups": "",
                    "action": "PlugRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1da91f63-8793-4bc2-8d86-b3301937231b",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PlugRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9942493c-bab9-4754-9ccd-4de1f8be11bf",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PlugRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "QE",
                    "id": "ef31bd19-9fe8-4b38-b0df-431f125040e6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlugRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9b2c4c56-81ae-4c01-b190-e9cd6e94610b",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "PlugRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b274b84a-98ec-4aed-a50e-c1bf409e1240",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "PlugRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WSAD",
                    "id": "1c15cd11-ba38-49ca-9e83-00fdec16d788",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=15,y=15)",
                    "groups": "",
                    "action": "PickRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9a6ff27d-901a-4307-8360-e3600a178a4f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "PickRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c53bfea8-968c-48b5-ba20-5d12879b6a48",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "PickRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e645d77a-23d4-47f8-b9a5-78324dde7c6c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "PickRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "87a380b0-2a62-47f8-a5b8-7fa2857a6960",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "PickRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Camera",
            "id": "c1b333d2-158c-4f0b-9099-8ab2782bbe9e",
            "actions": [
                {
                    "name": "CameraControl",
                    "type": "Value",
                    "id": "2e870203-cec0-44c4-8ae9-265ee8bf4ccc",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7776bce-c650-427a-b74b-b71cb527e031",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "ScaleVector2(x=25,y=25),InvertVector2",
                    "groups": "Gamepad",
                    "action": "CameraControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<DualShockGamepad>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}